// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Structure/ino-list  Avatar smoke-test 1`] = `
<div id="root-inner">
  <ino-list dense="false"
            two-lines="false"
            avatar="true"
  >
    <ino-list-item text="First text item"
                   secondary-text
    >
      <ino-img slot="leading"
               src="https://cdn-images-1.medium.com/max/1600/1*HP8l7LMMt7Sh5UoO1T-yLQ.png"
               ratio-width="1"
               ratio-height="1"
      >
      </ino-img>
    </ino-list-item>
    <ino-list-item text="Second text item"
                   secondary-text
    >
      <ino-img slot="leading"
               src="https://cdn-images-1.medium.com/max/1600/1*HP8l7LMMt7Sh5UoO1T-yLQ.png"
               ratio-width="1"
               ratio-height="1"
      >
      </ino-img>
    </ino-list-item>
    <ino-list-item text="Third text item"
                   secondary-text
    >
      <ino-img slot="leading"
               src="https://cdn-images-1.medium.com/max/1600/1*HP8l7LMMt7Sh5UoO1T-yLQ.png"
               ratio-width="1"
               ratio-height="1"
      >
      </ino-img>
    </ino-list-item>
  </ino-list>
</div>
`;

exports[`Structure/ino-list  Dense smoke-test 1`] = `
<div id="root-inner">
  <ino-list dense="true"
            two-lines="false"
            avatar="false"
  >
    <ino-list-item text="First text item"
                   secondary-text
    >
    </ino-list-item>
    <ino-list-item text="Second text item"
                   secondary-text
    >
    </ino-list-item>
    <ino-list-item text="Third text item"
                   secondary-text
    >
    </ino-list-item>
  </ino-list>
</div>
`;

exports[`Structure/ino-list  Playground smoke-test 1`] = `
<div id="root-inner">
  <ino-list dense="false"
            two-lines="false"
            avatar="false"
  >
    <ino-list-item text="First text item"
                   secondary-text
    >
    </ino-list-item>
    <ino-list-item text="Second text item"
                   secondary-text
    >
    </ino-list-item>
    <ino-list-item text="Third text item"
                   secondary-text
    >
    </ino-list-item>
  </ino-list>
</div>
`;

exports[`Structure/ino-list  TwoLines smoke-test 1`] = `
<div id="root-inner">
  <ino-list dense="false"
            two-lines="true"
            avatar="false"
  >
    <ino-list-item text="First text item"
                   secondary-text="Secondary Text"
    >
    </ino-list-item>
    <ino-list-item text="Second text item"
                   secondary-text="Secondary Text"
    >
    </ino-list-item>
    <ino-list-item text="Third text item"
                   secondary-text="Secondary Text"
    >
    </ino-list-item>
  </ino-list>
</div>
`;
